--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,10 +10,11 @@ $(function () {
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
     $.get("/products/" + nextId + ".json", function(data) {
       var product = data;
+      console.log(product)
       $(".productName").text(product["name"]);
+      $(".productInventory").text(product["inventory"]);
       $(".productPrice").text(product["price"]);
       $(".productDescription").text(product["description"]);
-      $(".productInventory").text(product["inventory"]);
       // re-set the id to current on the link
       $(".js-next").attr("data-id", product["id"]);
     });
