--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -14,26 +14,24 @@
   <%= f.submit "submit" %>
 <% end %>
 
-<h3 id='new-product'></h3>
+<div id="productResult">
+  <h2 id="productName"></h2>
+  <span id="productPrice"></span>
+  <p id="productDescription"></p>
+</div>
 
-<script>
-	$(function(){
-		$('form').submit(function(event){
-			event.preventDefault()
-			var values = $(this).serialize()
-			var post1 = $.post('/products', values)
-
-			post1.done(function(response){
-
-				$('#new-product').append(
-					debugger
-					`<p>${response["name"]}</p>`
-					`<p>${response["id"]}</p>`
-					`<p>${response["price"]}</p>`
-					`<p>${response["inventory"]}</p>`
-					`<p>${response["description"]}</p>`
-					)
-			})
-		})
-	})
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $('form').submit(function(event) {
+    event.preventDefault();
+    var values = $(this).serialize();
+    var posting = $.post('/products', values);
+    posting.done(function(data) {
+      var product = data;
+      $("#productName").text(product["name"]);
+      $("#productPrice").text("$" + product["price"]);
+      $("#productDescription").text(product["description"]);
+    });
+  });
+});
 </script>
