--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -13,3 +13,29 @@
   <%= f.text_field :inventory %>
   <%= f.submit "submit" %>
 <% end %>
+
+<div id="productResult">
+  <h2 id="productName"></h2>
+  <p id="productDescription"></p>
+  <p id="productPrice"></p>
+  <p id="productInventory"></p>
+</div>
+
+<script type="text/javascript" charshet="utf-8">
+$(function() {
+  $('form').submit(function (event) {
+    event.preventDefault();
+    const values = $(this).serialize();
+    const posting = $.post('/products', values);
+
+    posting.done(data => {
+      console.log(data)
+      $("#productName").text(data["name"])
+      $("#productDescription").text(data["description"])
+      $("#productPrice").text(data["price"])
+      $("#productInventory").text(data["inventory"])
+    })
+  })
+})
+</script>
+
