--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,7 +6,8 @@
 
 <script type="text/javascript" charset="utf-8">
 $(function () {
-  $(".js-next").on("click", function() {
+  $(".js-next").on("click", function(event) {
+    event.preventDefault();
     var nextId = parseInt($(".js-next").attr("data-id")) + 1;
     $.get("/products/" + nextId + ".json", function(data) {
       var product = data;
@@ -20,4 +21,3 @@ $(function () {
   });
 });
 </script>
-
