--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -6,10 +6,38 @@
   <%= f.label :price %>
   <%= f.text_field :price %>
   <br />
-  <%= f.label :description %>
-  <%= f.text_area :description %>
-  <br />
   <%= f.label :inventory %>
   <%= f.text_field :inventory %>
+  <br />
+  <%= f.label :description %>
+  <%= f.text_area :description %>
   <%= f.submit "submit" %>
 <% end %>
+
+<div id="productResult">
+  <h2 id="productName"></h2>
+  <p id="productPrice"></p>
+  <p id="productInventory"></p>
+  <p id="productDescription"></p>
+</div>
+
+<script type="text/javascript" charset="utf-8">
+  $(function(){
+    $('form').submit(function(e){
+      e.preventDefault();
+
+      var values = $(this).serialize();
+
+      var prods = $.post('/products', values);
+
+      prods.done(function(data){
+
+        var product = data;
+        $("#productName").text(product["name"]);
+        $("#productPrice").text(product["price"]);
+        $("#productInventory").text(product["inventory"]);
+        $("#productDescription").text(product["description"]);
+      });
+    });
+  })
+</script>
